@@ -203,10 +203,6 @@ Compile ()
 }
 
 
-# Print avr-gcc location and version before running tests.
-which avr-gcc
-avr-gcc --version
-
 n_files=0	# number of operated files
 n_emake=0	# number of compile/link errors
 n_ehost=0	# number of 'run-at-host' errors
@@ -276,7 +272,8 @@ for test_file in $test_list ; do
 			then
 			    Err_echo "simulate failed: $RETVAL"
 			    if [ $FLAG_KEEPCORE ] ; then
-					mv -f $CORE ${CORE}-$(echo ${test_file} | sed -e 's,/,_,g')-${mcu}-${prvers}
+				mv -f $CORE ${CORE}-$(echo ${test_file} \
+					| sed -e 's,/,_,g')-${mcu}-${prvers}
 			    fi
 			    n_esimul=$(($n_esimul + 1))
 			else
